--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -43,7 +43,7 @@
 			 fetch('api/hello', initPost)
 				.then(response => response.json())
 				.then(json => {
-						this.bonjours = json.content
+						this.bonjours = json
 					}
 				);
 		}
