--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,35 +1,18 @@
 <head>
 		<meta charset="utf-8">
 </head>
-<!--  chargement de vueJs il faut sans doute le trouver aure part ->
-<script src="https://unpkg.com/vue"></script -->
-<!-- development version, includes helpful console warnings -->
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-<!-- production version, optimized for size and speed ->
-<script src="https://cdn.jsdelivr.net/npm/vue"></script -->
+
+<script src="js/dist/vue.js"></script>
+
+<!-- production version, optimized for size and speed  vue.min.js
+-->
 <link 	rel="stylesheet" 
 		type="text/css" 
 		href="css/menu-cantine.css"/>
 <body>
 <a href="api/hello" type="application/json" target="json">json</a>
 
-<script type="text/x-template" id="modal-template">
-	<transition name="modal">
-		<div class="modal-mask">
-      		<div class="modal-wrapper">
-        		<div class="modal-container">
-					<span>{{ plat.name }}</span>
-					<ul>
-						<li v-for="elem in plat.nutritions">
-							<span>{{ elem.name }}:</span><span>{{ elem.value }}:</span><span>{{ elem.unit }}:</span>
-						</li>
-					</ul>
-              		<button class="modal-default-button" @click="$emit('close')">X</button>
-				</div>
-			</div>
-		</div>
-	</transition>
-</script>
+
 
 <div id="menucantine">
 
@@ -77,72 +60,8 @@
 	</section>
 </div>
 
-
+<script src="js/menuCantine.js"></script>
 
 </body>
 
-<script>
-//	var data = new FormData();
-//	data.append( "json", JSON.stringify({content: 'testPost'}));
-	
-	var initPost = {  
-			headers: {
-				'Accept': 'application/json',
-	      		'Content-Type': 'application/json',
-	      		'X-COM-PERSIST': 'TRUE',
-	    	},
-	    	method: 'post', 
-	    	credentials: "same-origin",
-	 //   	mode: "cors",
-	    	body: '{"semaine": 6, "annee": 2019, "uai": "0180823X" }',
-	    };
-	var initGet = { method: 'GET', };
-	
-	var  laModal = {
-		 data: function (){ 
-				return { nutData:[{'name': 'test', 'value': 'val', 'unit':'u'}], };
-		 	},
-		  template: '#modal-template',
-		 
-		 props: [ 'plat'],
-		};
 
-	
-	
-	const menuCantine = new Vue({
-		el: '#menucantine',
-		data: {	
-			menuSemaine: '',
-			debutPeriode: '',
-			finPeriode: '',
-			jours: '',
-			plat: '',
-			showModal: false,
-		},
-		
-		components: {
-			'modal' : laModal,
-		},
-		
-		created () {
-			 fetch('api/hello', initPost)
-				.then(response => response.json())
-				.then(json => {
-						this.menuSemaine = json;
-						this.debutPeriode = json.debut;
-						this.finPeriode = json.fin;
-						this.jours = json.jours;
-					}
-				);
-		},
-		methods: {
-			displayModal: function (plat) {
-				//$modal.setNut(nut);
-				this.plat = plat;
-				console.log(this.plat);
-				this.showModal = true;
-			}
-		}
-
-	})
-</script>
