--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,7 +14,7 @@
 		type="text/css" 
 		href="css/menu-cantine.css"/>
 <body>
-<a href="api/hello" type="application/json" target="json">json</a>
+<a href="api/menu" type="application/json" target="json">json</a>
 
 
 
