Mode demo et refactoring calcul date

--- a/src/main/resources/static/demo/demo.html
+++ b/src/main/resources/static/demo/demo.html
@@ -7,5 +7,5 @@
 <script src="./menu-cantine.js"></script>
 
 
-<menu-cantine-menu-semaine></menu-cantine-menu-semaine>
+<menu-cantine-menu-semaine is-demo></menu-cantine-menu-semaine>
 
