--- a/src/main/resources/static/demo/demo.html
+++ b/src/main/resources/static/demo/demo.html
@@ -4,7 +4,7 @@
 
 <a href="/menuCantine/api/lastmenu" type="application/json" target="json">json</a>
 
-<script src="./menu-cantine.js"></script>
+<script src="/menuCantine/demo/menu-cantine.js"></script>
 
 
 <menu-cantine-menu-semaine is-demo></menu-cantine-menu-semaine>
