--- a/src/main/resources/static/demo/demo.html
+++ b/src/main/resources/static/demo/demo.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <title>menu-cantine demo</title>
-<script src="https://unpkg.com/vue"></script>
+<script src="https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
 
 <a href="/menuCantine/api/lastmenu" type="application/json" target="json">json</a>
 
