Corrections des labels

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -26,6 +26,7 @@
 	  <option value="0370032J">lycée CLOUET</option>
 	  <option value="0410899E">lycée hôtelier de Blois</option>
 	  <option value="0180823X">lycée VAUVERT</option>
+	  <option value="0370888P">0370888P</option>
 	</select>
 	<input v-model="noSemaine" @change="loadMenu();"/>
 	
