IP machine local at home

--- a/src/main/resources/static/demo/demo.html
+++ b/src/main/resources/static/demo/demo.html
@@ -9,3 +9,4 @@
 
 <menu-cantine-menu-semaine is-demo></menu-cantine-menu-semaine>
 
+<!--  menu-cantine-menu-semaine is-demo></menu-cantine-menu-semaine -->
