--- a/src/main/resources/static/demo/demo.html
+++ b/src/main/resources/static/demo/demo.html
@@ -6,7 +6,7 @@
 
 <script src="/menuCantine/demo/menu-cantine.js"></script>
 
-
-<menu-cantine-menu-semaine is-demo></menu-cantine-menu-semaine>
-
+<div id="app" style="font-size: 14px; line-height: 1.42857143 ;">
+<menu-cantine-menu-semaine is-demo></menu-cantine-menu-semaine >
+</div>
 <!--  menu-cantine-menu-semaine is-demo></menu-cantine-menu-semaine -->
