feat: première version avec nouvelle API
Récupération du JSON depuis la nouvelle API, transformation en un objet Semaine pour l'envoyer à l'ancien front

--- a/src/main/resources/static/demo/demo.html
+++ b/src/main/resources/static/demo/demo.html
@@ -2,7 +2,7 @@
 <title>menu-cantine demo</title>
 <script src="https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
 
-<a href="/menuCantine/api/lastmenu" type="application/json" target="json">json</a>
+<a href="/menuCantine/api/test" type="application/json" target="json">json</a>
 
 <script src="/menuCantine/demo/menu-cantine.js"></script>
 
